--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:theme="@style/AAF.ActivityTheme" />
 
         <activity
-            android:name="com.bihe0832.android.common.webview.WebPageActivity"
+            android:name="com.bihe0832.android.common.tbswebview.WebPageActivity"
             android:exported="true">
 
             <intent-filter>
