增加锁屏界面实现、Webview 漏洞完善、自定义UI整理并增加滑动解锁和文字闪烁、设备信息获取优化

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,7 +14,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibOS"
 
 
 /**
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.16.1"
+ext.moduleVersionName = "5.17.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -66,7 +66,7 @@ ext.moduleInfo = [
         ],
         "specialdependenciesList": [
             "kapt"               : ["RouterCompiler"],
-            "debugImplementation": ["com.squareup.leakcanary:leakcanary-android:2.11"],
+//            "debugImplementation": ["com.squareup.leakcanary:leakcanary-android:2.11"],
         ]
     ],
     "CommonDebug"        : [
@@ -83,7 +83,7 @@ ext.moduleInfo = [
             "CommonFeedback", "CommonSplash", "CommonPhotos", "CommonWebview",
             "CommonNetwork", "CommonPraise", "CommonAbout", "CommonList", "CommonAceEditor",
             "CommonSvga", "CommonBottomTab", "CommonNavigationDrawer", "CommonShare", "CommonMessage",
-            "CommonQRCode", "CommonAccessibility"
+            "CommonQRCode", "CommonAccessibility", "CommonLockScreen"
         ]
     ],
     "CommonTBSWrapper"   : [
@@ -91,6 +91,13 @@ ext.moduleInfo = [
         "artifactId"         : "common-wrapper-tbs",
         "apidependenciesList": [
             "CommonTBS", "CommonTBSWebview", "CommonTBSFeedback"
+        ]
+    ],
+    "CommonLockScreen"   : [
+        "version"            : "5.16.0",
+        "artifactId"         : "common-lock-screen",
+        "apidependenciesList": [
+            "Framework"
         ]
     ],
     "CommonAccessibility": [
