--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -8,14 +8,16 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:name="com.bihe0832.android.base.debug.TestApplication"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        tools:replace="android:name">
+        tools:replace="android:name"
+        android:theme="@style/AAF.AppTheme">
         <activity
             android:name="com.bihe0832.android.test.TestSplashActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
