--- a/BaseDebug/src/main/AndroidManifest.xml
+++ b/BaseDebug/src/main/AndroidManifest.xml
@@ -114,6 +114,33 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/AAF.ActivityTheme" />
 
+        <activity
+            android:name="com.bihe0832.android.base.debug.lock.DebugLockActivity"
+            android:excludeFromRecents="true"
+            android:exported="true"
+            android:hardwareAccelerated="true"
+            android:launchMode="singleInstance"
+            android:noHistory="true"
+            android:process="@string/com_bihe0832_widgets_process_name"
+            android:resizeableActivity="false"
+            android:screenOrientation="portrait"
+            android:showOnLockScreen="true"
+            android:taskAffinity="com.bihe0832.android.base.debug.lock"
+            android:theme="@style/AAF.ActivityTheme.Transparent" />
+
+        <service
+            android:name="com.bihe0832.android.base.debug.lock.DebugLockService"
+            android:exported="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
+            android:process="@string/com_bihe0832_widgets_process_name">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.SCREEN_OFF" />
+                <action android:name="android.intent.action.SCREEN_ON" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </service>
+
         <service
             android:name="com.bihe0832.android.common.accessibility.service.AAFAccessibilityService"
             android:exported="true"
