--- a/BaseDebug/src/main/AndroidManifest.xml
+++ b/BaseDebug/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <!--    Widget-->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+
+
     <application
         android:name="com.bihe0832.android.base.debug.TestApplication"
         android:allowBackup="true"
@@ -114,6 +119,44 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/AAF.ActivityTheme" />
 
+        <service
+            android:name="com.bihe0832.android.common.accessibility.service.AAFAccessibilityService"
+            android:exported="true"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/com_bihe0832_debug_accessibility_service_config" />
+        </service>
+
+        <receiver
+            android:name=".widget.TestWidgetProvider1"
+            android:exported="true"
+            android:process="@string/com_bihe0832_widgets_process_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/com_bihe0832_debug_widget_demo_1" />
+        </receiver>
+
+        <receiver
+            android:name=".widget.TestWidgetProvider2"
+            android:exported="true"
+            android:process="@string/com_bihe0832_widgets_process_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/com_bihe0832_debug_widget_demo_2" />
+        </receiver>
+
         <activity
             android:name="com.bihe0832.android.base.debug.lock.DebugLockActivity"
             android:excludeFromRecents="true"
@@ -139,19 +182,9 @@
                 <action android:name="android.intent.action.SCREEN_ON" />
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
+
         </service>
 
-        <service
-            android:name="com.bihe0832.android.common.accessibility.service.AAFAccessibilityService"
-            android:exported="true"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
-            <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService" />
-            </intent-filter>
-            <meta-data
-                android:name="android.accessibilityservice"
-                android:resource="@xml/com_bihe0832_debug_accessibility_service_config" />
-        </service>
     </application>
 
 </manifest>
