--- a/LibLockScreen/src/main/AndroidManifest.xml
+++ b/LibLockScreen/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bihe0832.android.common.lock.screen">
+    package="com.bihe0832.android.lib.lock.screen">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application>
         <service
-            android:name="com.bihe0832.android.common.lock.screen.service.CancelNoticeService"
+            android:name="com.bihe0832.android.lib.lock.screen.service.CancelNoticeService"
+            android:process="@string/com_bihe0832_widgets_process_name"
             android:enabled="true"
-            android:exported="true"
-            android:process="@string/com_bihe0832_widgets_process_name"/>
+            android:exported="true" />
     </application>
 </manifest>
