--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,7 +14,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "Application,CommonDebug"
 
 
 /**
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.18.0"
+ext.moduleVersionName = "5.18.1"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -73,7 +73,8 @@ ext.moduleInfo = [
         "version"            : "5.18.0",
         "artifactId"         : "common-debug",
         "apidependenciesList": [
-            "Framework", "CommonPraise", "CommonList", "CommonAceEditor", "CommonWebview"
+            "Framework", "CommonPraise", "CommonList", "CommonAceEditor", "CommonWebview",
+            "LibScreenWrapper"
         ]
     ],
     "CommonWrapper"      : [
