--- a/CommonTBS/src/main/AndroidManifest.xml
+++ b/CommonTBS/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bihe0832.android.lib.tbs.webview">
+    package="com.bihe0832.android.common.webview.tbs">
 
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -9,7 +9,7 @@
 
     <application>
         <service
-            android:name="com.bihe0832.android.lib.webview.tbs.WebViewService"
+            android:name="com.bihe0832.android.common.webview.tbs.WebViewService"
             android:exported="false"
             android:process="@string/com_bihe0832_web_process_name" />
 
