权限完善，支持位置等特殊权限，授权还需要开关的场景；权限跳转；基于位置权限的Wi-Fi信息获取优化

--- a/Framework/src/main/AndroidManifest.xml
+++ b/Framework/src/main/AndroidManifest.xml
@@ -35,11 +35,17 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/AAF.ActivityTheme.Alpha"
             tools:replace="android:theme" />
+
         <activity
             android:name="com.bihe0832.android.lib.permission.ui.PermissionsActivityV2"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/AAF.ActivityTheme.Alpha"
             tools:replace="android:theme" />
+
+        <activity
+            android:name="com.bihe0832.android.framework.permission.special.PermissionsActivityWithSpecial"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/AAF.ActivityTheme.Alpha" />
 
         <activity
             android:name="com.bihe0832.android.framework.ui.main.CommonRootActivity"
