--- a/CommonFeedback/src/main/AndroidManifest.xml
+++ b/CommonFeedback/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <application>
         <activity
-                android:name="com.bihe0832.android.common.feedback.FeedbackActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:theme="@style/AAF.ActivityTheme"
-                android:hardwareAccelerated="true"
-                android:process="@string/com_bihe0832_web_process_name"
-                android:screenOrientation="portrait"></activity>
+            android:name="com.bihe0832.android.common.feedback.FeedbackActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:hardwareAccelerated="true"
+            android:process="@string/com_bihe0832_web_process_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AAF.ActivityTheme" />
     </application>
 </manifest>
