--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,7 +18,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibTTS,ServicesGooglePay,Application"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -52,15 +52,17 @@ ext.coremoduleInfo = [
         "version"            : "",
         "artifactId"         : "",
         "apidependenciesList": [
-            "Application", "CommonDebug", "CommonTBSFeedback","ServicesGoogle"
+            "Application", "CommonDebug", "CommonTBSFeedback", "ServicesGooglePay"
         ]
     ],
     "Application": [
         "version"                : "",
         "artifactId"             : "",
-        "apidependenciesList"    : ["CommonWrapper", "CommonTBSWrapper", "LibScreenWrapper"],
-        "specialdependenciesList": ["kapt"               : ["RouterCompiler"],
-                                    "debugImplementation": ["com.squareup.leakcanary:leakcanary-android:2.11"],
+        "apidependenciesList"    : [
+            "CommonWrapper", "CommonTBSWrapper", "LibScreenWrapper"],
+        "specialdependenciesList": [
+            "kapt"               : ["RouterCompiler"],
+            "debugImplementation": ["com.squareup.leakcanary:leakcanary-android:2.11"],
         ]]
 ]
 
