--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,7 +18,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "ServicesWrapper,Application"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -37,7 +37,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "6.2.3"
+ext.moduleVersionName = "6.3.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.coremoduleInfo = [
@@ -52,14 +52,14 @@ ext.coremoduleInfo = [
         "version"            : "",
         "artifactId"         : "",
         "apidependenciesList": [
-            "Application", "CommonDebug", "CommonTBSFeedback", "ServicesGooglePay","ServicesGoogle"
+            "Application", "CommonDebug", "CommonTBSFeedback"
         ]
     ],
     "Application": [
         "version"                : "",
         "artifactId"             : "",
         "apidependenciesList"    : [
-            "CommonWrapper", "CommonTBSWrapper", "LibScreenWrapper","ServicesGoogleAD"
+            "CommonWrapper", "CommonTBSWrapper", "LibScreenWrapper", "ServicesWrapper"
         ],
         "specialdependenciesList": [
             "kapt"               : ["RouterCompiler"],
