--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,7 +18,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibEncrypt"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -42,29 +42,29 @@ ext.moduleVersionName = "6.3.8"
 
 ext.coremoduleInfo = [
 
-    "APPTest"    : [
-        "version"                : "",
-        "artifactId"             : "",
-        "apidependenciesList"    : ["Application", "BaseDebug"],
-        "specialdependenciesList": ["kapt": ["RouterCompiler"]]
-    ],
-    "BaseDebug"  : [
-        "version"            : "",
-        "artifactId"         : "",
-        "apidependenciesList": [
-            "Application", "CommonDebug", "CommonTBSFeedback"
-        ]
-    ],
-    "Application": [
-        "version"                : "",
-        "artifactId"             : "",
-        "apidependenciesList"    : [
-            "CommonWrapper", "CommonTBSWrapper", "LibScreenWrapper", "ServicesWrapper"
+        "APPTest"    : [
+                "version"                : "",
+                "artifactId"             : "",
+                "apidependenciesList"    : ["Application", "BaseDebug"],
+                "specialdependenciesList": ["kapt": ["RouterCompiler"]]
         ],
-        "specialdependenciesList": [
-            "kapt"               : ["RouterCompiler"],
-            "debugImplementation": ["com.squareup.leakcanary:leakcanary-android:2.11"],
-        ]]
+        "BaseDebug"  : [
+                "version"            : "",
+                "artifactId"         : "",
+                "apidependenciesList": [
+                        "Application", "CommonDebug", "CommonTBSFeedback"
+                ]
+        ],
+        "Application": [
+                "version"                : "",
+                "artifactId"             : "",
+                "apidependenciesList"    : [
+                        "CommonWrapper", "CommonTBSWrapper", "LibScreenWrapper", "ServicesWrapper"
+                ],
+                "specialdependenciesList": [
+                        "kapt"               : ["RouterCompiler"],
+                        "debugImplementation": ["com.squareup.leakcanary:leakcanary-android:2.11"],
+                ]]
 ]
 
 ext.moduleInfo = ext.coremoduleInfo + ext.libmoduleInfo + ext.tbsmoduleInfo + ext.commonmoduleInfo + ext.widgetmoduleInfo + ext.kitmoduleInfo
