--- a/CommonDebug/src/main/AndroidManifest.xml
+++ b/CommonDebug/src/main/AndroidManifest.xml
@@ -1,60 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bihe0832.android.common.debug">
+        package="com.bihe0832.android.common.debug">
 
     <application>
         <activity
-            android:name="com.bihe0832.android.common.debug.log.DebugLogActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:exported="true"
-            android:theme="@style/AAF.ActivityTheme">
+                android:name="com.bihe0832.android.common.debug.log.DebugLogActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:exported="true"
+                android:theme="@style/AAF.ActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
 
         <receiver
-            android:name="com.bihe0832.android.common.debug.widget.app.AAFDebugWidgetProviderDetail"
-            android:exported="true"
-            android:label="详细调试">
+                android:name="com.bihe0832.android.common.debug.widget.app.AAFDebugWidgetProviderDetail"
+                android:exported="true"
+                android:label="详细调试">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.intent.action.SCREEN_ON" />
                 <action android:name="android.appwidget.action.REFRESH" />
             </intent-filter>
             <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/com_bihe0832_debug_widget_detail" />
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/com_bihe0832_debug_widget_detail" />
         </receiver>
 
         <receiver
-            android:name="com.bihe0832.android.common.debug.widget.app.AAFDebugWidgetProviderSimple"
-            android:exported="true"
-            android:label="简洁调试">
+                android:name="com.bihe0832.android.common.debug.widget.app.AAFDebugWidgetProviderSimple"
+                android:exported="true"
+                android:label="简洁调试">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.intent.action.SCREEN_ON" />
                 <action android:name="android.appwidget.action.REFRESH" />
             </intent-filter>
             <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/com_bihe0832_debug_widget_simple" />
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/com_bihe0832_debug_widget_simple" />
         </receiver>
 
         <receiver
-            android:name="com.bihe0832.android.common.debug.widget.device.AAFDebugWidgetProviderDevice"
-            android:exported="true"
-            android:label="设备调试">
+                android:name="com.bihe0832.android.common.debug.widget.device.AAFDebugWidgetProviderDevice"
+                android:exported="true"
+                android:label="设备调试">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="android.intent.action.SCREEN_ON" />
                 <action android:name="android.appwidget.action.REFRESH" />
             </intent-filter>
             <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/com_bihe0832_debug_widget_device" />
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/com_bihe0832_debug_widget_device" />
         </receiver>
+
+        <activity
+                android:name="com.bihe0832.android.common.debug.module.DebugRootActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="sensor"
+                android:theme="@style/AAF.ActivityTheme" />
     </application>
 
 </manifest>
