进一步优化颜色选择框，，统一所有颜色调用到LibColor

--- a/dependencies_lib.gradle
+++ b/dependencies_lib.gradle
@@ -384,7 +384,7 @@ ext.libmoduleInfo = [
                 "version"            : "6.4.1",
                 "artifactId"         : "lib-immersive",
                 "apidependenciesList": [
-                        "LibDeviceNetwork", "LibMedia", "LibAAFResource", "LibCommonUIUtils",
+                        "LibDeviceNetwork", "LibMedia", "LibAAFResource", "LibColor",
                         project.androidsupport.appcompat
                 ]
         ],
