--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,7 +18,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "LibCommonUIUtils,LibColor,LibImmersive"
+ext.developModule = "LibAAFResource,LibCommonUIUtils,LibColor,LibImmersive"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
