--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,7 +9,8 @@ apply from: rootDir.toString() + '/dependencies_services.gradle'
 /************************************ 组件化开发常用配置 ************************************/
 /**
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
- * 当前如果全量填"APPTest"*/
+ * 当前如果全量填"APPTest"
+ */
 ext.mainProject = "APPTest"
 
 /**
